--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "src/server.js",
   "scripts": {
     "test": "set NODE_ENV=test&& jasmine",
-   "start": "node src/server.js"
+    "start": "node src/server.js"
   },
   "repository": {
     "type": "git",
@@ -18,6 +18,7 @@
     "request": "^2.83.0"
   },
   "dependencies": {
+    "dotenv": "^5.0.0",
     "express": "^4.16.2"
   }
 }
