--- a/src/db/config/config.json
+++ b/src/db/config/config.json
@@ -11,7 +11,7 @@
     "password": null,
     "database": "bloccit-test",
     "host": "127.0.0.1",
-    "dialect": "mysql"
+    "dialect": "postgres"
   },
   "production": {
     "username": "root",
