--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "mysql2": "^1.6.5",
     "pg": "^7.4.1",
     "pg-hstore": "^2.3.2",
-    "sequelize": "^4.32.6"
+    "sequelize": "^4.32.6",
+    "sequelize-cli": "^5.4.0"
   }
 }
