--- a/src/db/config/config.json
+++ b/src/db/config/config.json
@@ -18,6 +18,7 @@
     "password": null,
     "database": "database_production",
     "host": "127.0.0.1",
-    "dialect": "mysql"
+    "dialect": "postgres",
+    "use_env_variable": "postgresql-aerodynamic-37323"
   }
 }
